fix(Campaign): Allow main container to overflow vertically

--- a/campaign/src/layouts/default-layout.module.scss
+++ b/campaign/src/layouts/default-layout.module.scss
@@ -1,4 +1,5 @@
 .container {
+  overflow-y: auto;
   height: 100vh;
 }
 
